fixed horizontal scrolling appearing because of oversized map iframes

--- a/css/colors.css
+++ b/css/colors.css
@@ -3,6 +3,11 @@ body {
     background-color: #131311;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .img-container {
     display: block;
     margin-left: auto;
